Send group member email
