# api-spec/openapi.yaml
@@ -246,6 +246,20 @@ paths:
           description: Could not find member for given ID
         '500':
           description: Server error
+  '/v1/member/:member_id/send_group_signup_email':
+    post:
+      tags:
+        - Members
+      summary: Send the new member signup email to the whole group
+      description: ''
+      operationId: ''
+      responses:
+        '200':
+          description: Email sent
+        '404':
+          description: Could not find member for given ID
+        '500':
+          description: Server error
   '/v1/member/:member_id/is_active':
     put:
       tags:
